compilers/ID/cool/regression/BASE_cgtest/old_cool/let_incorrect.cl.stderr
./BASE_cgtest/let_incorrect.cl:8: Inferred type String of initialization of x does not conform to identifier's declared type Bool.
Compilation halted due to static semantic errors.
