compilers/ID/cool/regression/BASE_cgtest/old_cool/let_incorrect.cl
class Main is
   main(): Int is
	let x : Bool <- "3" in 
	    begin 
		x;
		1;
	    end
	end
    end;
end;
